Add unzip and protoc to base image

--- a/usermode/Dockerfile
+++ b/usermode/Dockerfile
@@ -5,12 +5,17 @@ RUN code --user-data-dir=/root --install-extension zhuangtongfa.material-theme
 FROM codercom/code-server
 
 RUN apt-get update && \
-	apt-get install -y locales net-tools curl build-essential git sudo && \
+	apt-get install -y locales net-tools curl build-essential git sudo unzip && \
 	adduser --disabled-password --ingroup sudo -u 3000 --gecos '' coder && \
 	echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers && \
 	echo "user ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/user && \
 	chmod 0440 /etc/sudoers.d/user && \
-	locale-gen en_US.UTF-8 
+	locale-gen en_US.UTF-8  && \
+	curl -L -O https://github.com/google/protobuf/releases/download/v3.6.0/protoc-3.6.0-linux-x86_64.zip && \
+	unzip protoc-3.6.0-linux-x86_64.zip && \
+	mv bin/protoc /usr/local/bin/protoc && \
+	mv include/* /usr/local/include && \
+	rm -rf protoc-3.6.0-linux-x86_64.zip bin include readme.txt
 
 USER coder
 WORKDIR /home/coder
