--- a/js/Dockerfile
+++ b/js/Dockerfile
@@ -12,6 +12,6 @@ RUN curl -O https://nodejs.org/dist/v10.15.3/node-v10.15.3-linux-x64.tar.xz && \
 
 ENV PATH "$PATH:/node/bin"
 
-WORKDIR /home/coder/projects
+WORKDIR /home/coder/project
 
 ENTRYPOINT ["dumb-init", "code-server"]
