Update latex base

--- a/latex/Dockerfile
+++ b/latex/Dockerfile
@@ -8,7 +8,8 @@ WORKDIR /home/coder
 
 COPY --from=0 /root/.vscode/extensions ./.code-server/extensions
 
-RUN sudo add-apt-repository ppa:jonathonf/texlive && \
+RUN sudo apt-get update && sudo apt-get install software-properties-common && \
+    sudo add-apt-repository ppa:jonathonf/texlive && \
     sudo apt update && sudo apt install texlive-full && \
     sudo chown -R coder ./.code-server
 
