--- a/base/settings.json
+++ b/base/settings.json
@@ -1,3 +1,4 @@
 {
-    "workbench.colorTheme": "One Dark Pro"
+    "workbench.colorTheme": "One Dark Pro",
+    "terminal.integrated.shell.linux": "/bin/bash"
 }
