Add go modules image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,12 @@ jobs:
           docker build -t davefinster/coder:go .
           docker push davefinster/coder:go
       - type: shell
+        name: Build and Ship go modules Image
+        command: |
+          cd gomodules
+          docker build -t davefinster/coder:gomodules .
+          docker push davefinster/coder:gomodules
+      - type: shell
         name: Build and Ship JS Image
         command: |
           cd js
