Fix gopls install command

--- a/gomodules/Dockerfile
+++ b/gomodules/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /home/coder
 
 COPY ./settings.json /home/coder/.local/share/code-server/User/settings.json
 
-RUN go get golang.org/x/tools/gopls@latest && \
+RUN GO111MODULE=on go get golang.org/x/tools/gopls@latest && \
     sudo chown -R coder /home/coder/.local
 
 WORKDIR /home/coder/project
