Add texlive-fonts-extra-links dep

--- a/latex/Dockerfile
+++ b/latex/Dockerfile
@@ -13,7 +13,7 @@ COPY --from=0 /root/.vscode/extensions /home/coder/.local/share/code-server/exte
 RUN sudo apt-get update && sudo apt-get -y install software-properties-common && \
     sudo add-apt-repository ppa:jonathonf/texlive && \
     sudo DEBIAN_FRONTEND=noninteractive apt-get install -y tzdata && \
-    sudo apt-get update && sudo apt-get install -y texlive-full fonts-roboto && \
+    sudo apt-get update && sudo apt-get install -y texlive-fonts-extra-links texlive-full fonts-roboto && \
     sudo chown -R coder /home/coder/.local/share/code-server/extensions
 
 WORKDIR /home/coder/project
