Copy/paste fail

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,12 @@ jobs:
           docker build -t davefinster/coder:base .
           docker push davefinster/coder:base
       - type: shell
+        name: Build and Ship Go 1.14 with Modules Image
+        command: |
+          cd go114
+          docker build  -t davefinster/coder:go114 .
+          docker push davefinster/coder:go114
+      - type: shell
         name: Build and Ship go Image
         command: |
           cd go
@@ -43,9 +49,3 @@ jobs:
           cd js
           docker build -f Dockerfile-node8 -t davefinster/coder:jsv8 .
           docker push davefinster/coder:jsv8
-      - type: shell
-        name: Build and Ship Go 1.14 with Modules Image
-        command: |
-          cd go114
-          docker build -f Dockerfile-node8 -t davefinster/coder:go114 .
-          docker push davefinster/coder:go114
