Fix migrate install

--- a/go114/Dockerfile
+++ b/go114/Dockerfile
@@ -11,7 +11,8 @@ RUN curl -O https://dl.google.com/go/go1.14.2.linux-amd64.tar.gz && \
 	rm go1.14.2.linux-amd64.tar.gz && \
 	curl -O -L https://github.com/golang-migrate/migrate/releases/download/v4.10.0/migrate.linux-amd64.tar.gz && \
 	tar -zxvf migrate.linux-amd64.tar.gz && \
-	sudo mv migrate.linux-amd64 /usr/local/bin/migrate
+	sudo mv migrate/migrate.linux-amd64 /usr/local/bin/migrate && \
+	rm migrate.linux-amd64.tar.gz
 
 COPY --from=0 /root/.vscode/extensions /home/coder/.local/share/code-server/extensions
 
