--- a/go114/settings.json
+++ b/go114/settings.json
@@ -1,20 +1,8 @@
 {
     "workbench.colorTheme": "One Dark Pro",
     "terminal.integrated.shell.linux": "/bin/bash",
-    "go.useLanguageServer": true,
-    "[go]": {
-        "editor.snippetSuggestions": "none",
-        "editor.formatOnSave": true,
-        "editor.codeActionsOnSave": {
-            "source.organizeImports": true
-        }
-    },
-    "gopls": {
-        "usePlaceholders": true, // add parameter placeholders when completing a function
-
-        // Experimental settings
-        "completeUnimported": true, // autocomplete unimported packages
-        "deepCompletion": true     // enable deep completion
-    },
-    "files.eol": "\n" // formatting only supports LF line endings
+    "go.lintTool": "golint",
+    "go.useCodeSnippetsOnFunctionSuggest": true,
+    "files.eol": "\n",
+    "go.useLanguageServer": true // formatting only supports LF line endings
 }
