--- a/go114/settings.json
+++ b/go114/settings.json
@@ -1,10 +1,18 @@
 {
+    "editor.formatOnSave": true,
+    "workbench.colorCustomizations": {},
     "workbench.colorTheme": "One Dark Pro",
-    "terminal.integrated.shell.linux": "/bin/bash",
+    "workbench.preferredDarkColorTheme": "One Dark Pro",
+    "window.autoDetectColorScheme": true,
+    "go.autocompleteUnimportedPackages": true,
     "go.lintTool": "golint",
-    "go.useCodeSnippetsOnFunctionSuggest": true,
     "files.eol": "\n",
-    "go.useLanguageServer": true, // formatting only supports LF line endings,
+    "terminal.integrated.shell.linux": "/bin/bash",
+    "go.useCodeSnippetsOnFunctionSuggest": true,
+    "go.languageServerExperimentalFeatures": {
+        "diagnostics": true,
+        "documentLink": true
+    },
     "gopls": {
         "usePlaceholders": true,
         "completeUnimported": true,
