Force language server on

--- a/go114/settings.json
+++ b/go114/settings.json
@@ -13,6 +13,7 @@
         "diagnostics": true,
         "documentLink": true
     },
+    "go.useLanguageServer": true,
     "gopls": {
         "usePlaceholders": true,
         "completeUnimported": true,
